--- a/html/skills.html
+++ b/html/skills.html
@@ -5,82 +5,127 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="../styles/index.css" />
+        <link rel="stylesheet" href="../styles/button.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
             rel="stylesheet"
         />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+        <link rel="icon" type="image/x-icon" href="../assets/Logo.png">
         <title>Fablog</title>
     </head>
     <body>
         <header>
             <section class="top-nav">
-                <div>Logo Here</div>
-                <input id="menu-toggle" type="checkbox" />
+                <img src="../assets/Logo.png" class="nav-logo">
+                <input id="menu-toggle" type="checkbox"/>
                 <label class="menu-button-container" for="menu-toggle">
                     <div class="menu-button"></div>
                 </label>
                 <ul class="menu">
-                    <li><a href="./index.html">Home</a></li>
-                    <li>About Me</li>
-                    <li>Skills</li>
-                    <li>Contact</li>
+                    <li><a class="hover" href="./index.html" >Home</a></li>
+                    <li><a class="hover" href="./projects.html">Projects</a></li>
+                    <li><a class="hover" href="./skills.html">Skills</a></li></a>
+                    <li><a class="hover" href="./about.html">About</a></li>
+                    <li><a class="hover" href="./contact.html">Contact</a></li>
                 </ul>
             </section>
         </header>
         <main>
-            <h1>Skills</h1>
-            <p>
-                Welcome to my site, here i tried very hard to exposse a little
-                part of myself. Hope you to enjoy
-            </p>
+            <h1 class="main-header">Skills!</h1>
+
+            <div class="card">
+                <p>
+                    Here is a brief of my current progress with different coding skills:
+                </p>
+                <label for="git">Git:</label>
+                <div class="progress-bar">
+                    <div class="progress-expert"></div>
+                  </div>
+                <label for="html">HTML:</label>
+                <div class="progress-bar">
+                    <div class="progress-advanced"></div>
+                  </div>
+                <label for="css">CSS:</label>
+                <div class="progress-bar">
+                    <div class="progress-medium"></div>
+                  </div>
+                <label for="javascript">Javascript:</label>
+                <div class="progress-bar">
+                    <div class="progress-novice"></div>
+                  </div>
+                <label for="nodejs">NodeJS:</label>
+                <div class="progress-bar">
+                    <div class="progress-advanced"></div>
+                  </div>
+                <label for="react">React:</label>
+                <div class="progress-bar">
+                    <div class="progress-novice"></div>
+                  </div>
+                <label for="nest">Nest:</label>
+                <div class="progress-bar">
+                    <div class="progress-expert"></div>
+                </div>
+                  
+                    <label for="nest">Databases:</label>
+                    <div class="progress-bar">
+                        <div class="progress-expert"></div>
+                      </div>
+                        <label for="nest">Cloud Computing (AWS):</label>
+                        <div class="progress-bar">
+                            <div class="progress-advanced"></div>
+                          </div>
+                <p>
+                    As you can deduce currently i have a Backend Focus
+                </p>
+            </div>
+            
         </main>
         <footer class="footer-distributed">
             <div class="footer-left">
-                <h3>Company<span>logo</span></h3>
-
-                <p class="footer-links">
-                    <a href="#" class="link-1">Home</a>
-                    <a href="#">Blog</a>
-                    <a href="#">Pricing</a>
-                    <a href="#">About</a>
-                    <a href="#">Faq</a>
-                    <a href="#">Contact</a>
-                </p>
+                <div class="presentation">
+                    <h4>Fabio Enrique Anaya Castillo</h4>
+                    <img src="../assets/Logo.png" class="footer-logo">
+                </div>
+                <section class="container-center">
+                    <p class="footer-links">
+                        <a href="./index.html" class="link-1">Home</a>
+                        <a href="./projects.html">Projects</a>
+                        <a href="./skills.html">Skills</a>
+                        <a href="./about.html">About</a>
+                        <a href="./contact.html">Contact</a>
+                    </p>
+                </section>
                 <p class="footer-company-name">Fabio Anaya © 2022</p>
             </div>
-
             <div class="footer-center">
-                <div>
-                    <i class="fa fa-map-marker"></i>
-                    <p><span>Medellín</span> Colombia</p>
+                <div class="contact-data">
+                    <img src="../assets/location-svgrepo-com.svg" class="footer-icon"/>
+                    <p><span>Medellín,</span> Colombia</p>
                 </div>
-                <div>
-                    <i class="fa fa-phone"></i>
+                <div class="contact-data">
+                    <img src="../assets/phone-svgrepo-com.svg" class="footer-icon"/>
                     <p>+57 301 5267 553</p>
                 </div>
-                <div>
-                    <i class="fa fa-envelope"></i>
-                    <p>
+                <div class="contact-data">
+                        <img src="../assets/mail-svgrepo-com.svg" class="footer-icon"/>
                         <a href="mailto:support@company.com"
                             >feanayac@hotmail.com</a
                         >
-                    </p>
                 </div>
             </div>
             <div class="footer-right">
                 <p class="footer-company-about">
-                    <span>About Me</span>
-                    Lorem ipsum dolor sit amet, consectateur adispicing elit.
-                    Fusce euismod convallis velit, eu auctor lacus vehicula sit
-                    amet.
+                    <span>Who is Fabio?</span>
+                    Im a lover of the life, basically i love anything that could inspire me to be more thankfull about being alive. If you want to take in touch PLEASE do it. Peace
                 </p>
-                <div class="footer-icons">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
-                    <a href="#"><i class="fa fa-github"></i></a>
+                <div class="social-media">
+                    <a referrerpolicy="no-referrer" rel="noreferrer" href="https://www.instagram.com/fabioanayac" ><img src="../assets/instagram-svgrepo-com.svg" class="social-media-icon"/></a>
+                    <a referrerpolicy="no-referrer" rel="noreferrer" href="https://twitter.com/FabioAnaya2"><img src="../assets/twitter-svgrepo-com.svg" class="social-media-icon"/></a>
+                    <a referrerpolicy="no-referrer" rel="noreferrer" href="https://www.linkedin.com/in/fabioanayac"><img src="../assets/linkedin-svgrepo-com.svg" class="social-media-icon"/></a>
+                    <a referrerpolicy="no-referrer" rel="noreferrer" href="https://github.com/Fabiozil"><img src="../assets/github-svgrepo-com.svg" class="social-media-icon"/></a>
                 </div>
             </div>
         </footer>
